--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,7 @@ gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
-MarkupSafe==1.1.1
-multidict==5.1.0
-numpy==1.20.1
-pandas==1.2.3
-Pillow==8.2.0
-praw==7.2.0
-prawcore==2.0.0
+
 
 pytz==2021.1
 six==1.15.0
@@ -38,3 +32,11 @@ websocket-client==0.57.0
 Werkzeug==1.0.1
 WTForms==2.3.3
 yarl==1.6.3
+
+
+Jinja2==2.11.2
+requests==2.24.0
+
+
+visitor==0.1.3
+
