--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,24 @@
-aiohttp==3.7.4
-asgiref==3.3.4
-async-timeout==3.0.1
-attrs==20.3.0
-certifi==2020.12.5
+
+
+
+certifi==2020.6.20
 chardet==3.0.4
-dominate==2.6.0
-Flask==1.0.2
+click==7.1.2
+dominate==2.5.2
+Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
 Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.3
-
-
-pytz==2021.1
-six==1.15.0
-soupsieve==2.2.1
-SpeechRecognition==3.8.1
-SQLAlchemy==1.3.23
-sqlparse==0.4.1
-typing-extensions==3.7.4.3
-update-checker==0.18.0
-urllib3==1.26.4
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+requests==2.24.0
+SQLAlchemy==1.3.19
+urllib3==1.25.10
 visitor==0.1.3
-websocket-client==0.57.0
 Werkzeug==1.0.1
 WTForms==2.3.3
-yarl==1.6.3
-
-
-requests==2.24.0
-
-
-
