--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,12 @@ praw==7.2.0
 discord.py==1.6.0
 prawcore==2.0.0
 
+aiohttp==3.7.4
+asgiref==3.3.4
+async-timeout==3.0.1
+attrs==20.3.0
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==3.0.4
+
 
